opsiclientd (4.0.86) UNRELEASED; urgency=medium

  * opsiclientd_shutdown_starter logs the event it should fire

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 09 Sep 2015 13:39:51 +0200

opsiclientd (4.0.85) testing; urgency=medium

  * Refactored opsiclientd_shutdown_starter.
  * Opsiclient Shutdown Starter now logs to
    C:\opsi.org\log\opsiclientd_shutdown_starter.log

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 08 Sep 2015 15:03:09 +0200

opsiclientd (4.0.84) testing; urgency=medium

  [ Erol Ueluekmen ]
  * exclude_product_group_ids and include_product_group_ids added.
  * Putting quotation marks around the action_processor_starter.exe to
    avoid unwanted behaviour.

  [ Niko Wenselowski ]
  * Windows 8.1: Sleeping a short time before triggering the reboot.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 08 Sep 2015 15:02:20 +0200

opsiclientd (4.0.82) stable; urgency=low

  * ControlServer: Bugfix in Flooding prevention
  * SoftwareOnDemand:
      Escaping special characters in HTML-Output
      Bugfix in sort algorithm
  * CacheService: fixing instlogfile sync to server

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 11 Sep 2014 22:05:04 +0100

opsiclientd (4.0.81) stable; urgency=low

  * installation_pending will not set, if a product has always actionRequest.
  * Only reset action request in cacheservice, if md5sum missmatch is detected. (error on server)
  * Don't fire on_shutdown if installation_pending is detected.

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 8 Oct 2014 11:11:04 +0100

opsiclientd (4.0.78) stable; urgency=low

  * Added sync_time_from_service function.
  * ControlServer: Added Flooding prevention
  * SoftwareOnDemand: Sorting Products by ProductName
  * WAN/VPN: Workarround timing problem while network reconnect

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 29 Jul 2014 01:19:04 +0100

opsiclientd (4.0.77) stable; urgency=low

  * WAN/VPN: Win 8.1 mshotfix support