@@ -416,7 +416,7 @@ def softwareInformationToProductInstallationStatus(self, hostIds=[]):
 	'''
 	This method sets product installation states based on software inventory results.
 	'''
-	if not type(hostIds) in (list, tuple):
+	if not isinstance(hostIds, (list, tuple, set)):
 		hostIds = [ hostIds ]
 	if not hostIds:
 		hostIds = self.getClientIds_list()
